force-app/main/default/objects/Product2/fields/RevRecRule__c.field-meta.xml
<CustomField>
    <fullName>RevRecRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RevRecRule</label>
    <referenceTo>RevRecRules__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>