force-app/main/default/objects/Product2/fields/Rule_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Rule_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule Assignment</label>
    <referenceTo>Rule_Assignment__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>